# nao-autism

./: .gitignore  .rosinstall  .rosinstall.bak  README  README.md  data.json  diagnostic_dump.txt  installscript.sh  nao_autism  nao_autism.model  nao_autism.out  nao_components.sh  run_settings_editor.sh  setup.py  speechFile.data  standing.bag  tfToJoints.data
2013-06-27.11:22:00/: raw.bag  rotations.bag
2013-06-27.12:18:09/: raw.bag  rotations.bag
bag_data/: angry.bag  angry2.bag  angry3.bag  happy.bag  sad.bag  scared.bag
docs/: Nao Settings Editor.md
documents/: Nao Settings Editor.md  Repository Overview.md
launch/: run_nao.launch
new_bag_data/: happy.bag  nao_autism  nao_autism.model  nao_autism.out  nao_autism.predict  nao_autism.training  nao_autism.training.model  nao_autism_proper  nao_autism~  scared.bag
settings editor/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  data.json  settings_editor
settings editor/include/: AddBehaviorDialog.h  AllPhrasesTab.h  BaseSettingsData.h  BaseSettingsTab.h  BehaviorData.h  BehaviorTab.h  Controller.h  FileMenu.h  GameBehaviorsTab.h  GenericPhraseTab.h  GuessGameTab.h  Keys.h  MimicGameTab.h  Model.h  PhraseGroup.h  PhraseGroupData.h  PhraseTab.h  PhrasesTab.h  PhrasesWidget.h  TextInputDialog.h  Window.h  moc_BehaviorTab.cxx  moc_Controller.cxx  moc_FileMenu.cxx  moc_GameBehaviorsTab.cxx  moc_GenericPhraseTab.cxx  moc_GuessGameTab.cxx  moc_MimicGameTab.cxx  moc_Model.cxx  moc_PhraseTab.cxx  moc_PhrasesWidget.cxx  moc_TextInputDialog.cxx
settings editor/src/: AddBehaviorDialog.cpp  AllPhrasesTab.cpp  BaseSettingsTab.cpp  BehaviorTab.cpp  Controller.cpp  FileMenu.cpp  GameBehaviorsTab.cpp  GenericPhraseTab.cpp  GuessGameTab.cpp  MimicGameTab.cpp  Model.cpp  PhraseTab.cpp  PhrasesTab.cpp  PhrasesWidget.cpp  TextInputDialog.cpp  Window.cpp  main.cpp
src/emotion_game/: CMakeLists.txt  data.json  package.xml
src/emotion_game/include/: Behavior.h  Game.h  GameSettings.h  GenerateJSONFile.h  GuessGame.h  Keys.h  MimicGame.h  Phrase.h
src/emotion_game/launch/: data.json  emotion_game.launch  emotion_game_rf.launch  emotion_game_rf_nps.launch  emotion_game_svm.launch  emotion_game_svm_nps.launch  filetest.launch  kinect_control.launch  kinect_nao.launch  rectest.launch
src/emotion_game/launch/pocketsphinx/: emotion_game.dic  emotion_game.lm  emotion_game.log_pronounce  emotion_game.sent  emotion_game.vocab  emotion_game_speech.launch
src/emotion_game/scripts/: recognizer.py
src/emotion_game/src/: Behavior.cpp  Diagnostics.cpp  FileTest.cpp  Game.cpp  GameSettings.cpp  GenerateJSONFile.cpp  GenerateJSONNode.cpp  GuessGame.cpp  MimicGame.cpp  NaoMimicker.cpp  Phrase.cpp  TfMeasure.cpp  TfRemap.cpp  main.cpp
src/emotion_game_diagnostics/: CMakeLists.txt  package.xml
src/emotion_game_diagnostics/include/: ExecutionControlBox.h  GeneralInformationBox.h  NaoDiagnostics.h  NodeBox.h  Window.h
src/emotion_game_diagnostics/src/: CheckerNode.cpp  ExecutionControlBox.cpp  GeneralInformationBox.cpp  NaoDiagnostics.cpp  NodeBox.cpp  Window.cpp  main.cpp
src/learner/: CMakeLists.txt  package.xml  test.thing
src/learner/include/: DataLoader.h  DataPoint.h  DataStore.h  KNearestNeighbour.h  Learner.h  PoseData.h  PoseDataPoint.h  dataLoader.h  learner.h
src/learner/include/classification/: DWKNearestNeighbour.h  DataLoader.h  DataPoint.h  DataStore.h  KNearestNeighbour.h  Learner.h  PlainDataStore.h  PoseDataPoint.h
src/learner/include/classification/accuracyTester/: AccuracyTesterModel.h  AccuracyTesterView.h
src/learner/launch/: accuracy_tester.launch  knn.launch
src/learner/msg/: PoseClassification.msg
src/learner/resources/: angry4.bag  nao_autism  nao_autism.model  sad.bag  standing2.bag
src/learner/src/: DataLoader.cpp  PlainDataStore.cpp  PoseDataPoint.cpp  dataLoader.cpp  learner.cpp
src/learner/src/classification/: ClassificationListener.cpp  DWKNearestNeighbour.cpp  DataLoader.cpp  DataLoaderNode.cpp  KNearestNeighbour.cpp  KNearestNeighbourNode.cpp  PlainDataStore.cpp  PoseDataPoint.cpp  RFNode.cpp  SVMNode.cpp  SvmExport.cpp
src/learner/src/classification/accuracyTester/: AccuracyTesterModel.cpp  AccuracyTesterView.cpp
src/nao-autism-gui/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/nao-autism-gui/include/: NaoAutismWindow.h  NaoBehavior.h  NaoGuessBox.h  NaoSpeech.h
src/nao-autism-gui/include/nao_gui/: NaoAutismWindow.h  NaoGuessBox.h
src/nao-autism-gui/src/: NaoAutismWindow.cpp  NaoBehavior.cpp  NaoGuessBox.cpp  NaoSpeech.cpp  main.cpp
src/nao_autism_gui/: CMakeLists.txt  CMakeLists.txt.save  package.xml
src/nao_autism_gui/include/: NaoBehavior.h  NaoSpeech.h  NaoSpeechData.h
src/nao_autism_gui/include/nao_gui/: GenericControlBox.h  NaoAutismWindow.h  NaoGuessBox.h  NaoMimicBox.h
src/nao_autism_gui/launch/: nao_autism_gui.launch
src/nao_autism_gui/resources/: speech.data
src/nao_autism_gui/src/: GenericControlBox.cpp  NaoAutismWindow.cpp  NaoBehavior.cpp  NaoGuessBox.cpp  NaoMimicBox.cpp  NaoSpeech.cpp  NaoSpeechData.cpp  main.cpp
src/nao_autism_messages/: CMakeLists.txt  package.xml
src/nao_autism_messages/msg/: ExecutionStatus.msg  PoseClassification.msg  Record.msg  RunBehaviorAction.msg  SetExecutionStatus.msg
src/nao_control/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/nao_control/action/: Behavior.action
src/nao_control/include/: NaoControl.h  NaoControl.h~
src/nao_control/include/nao_control/: NaoControl.h
src/nao_control/src/: NaoControl.cpp
src/nao_control/src/nao_control/: NaoControl.cpp
src/nao_msgs/: CMakeLists.txt  package.xml
src/rosbag_recorder/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/rosbag_recorder/include/: recorder.h  rosbag_recorder.h  rosbag_recorder.h~
src/rosbag_recorder/src/: TfReader.cpp  recorder.cpp  recorder_tester.cpp  rosbag_recorder.cpp  rosbag_recorder.cpp~
src/woz/: package.xml  (+3 more)
svm/: linear-svm.model  nao_autism  nao_autism.model  nao_autism.out  nao_autism.output  nao_autism.range  nao_autism.scale  nao_autism.scale.out  nao_autism.t
(+50 files in other folders)
